k8s-manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiusys-service
  namespace: kiusys
spec:
  type: NodePort
  selector:
    app: kiusys
  ports:
    - port: 8080
      targetPort: 8080
